--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <span class="bar"></span>
         </div>
         <ul class="nav-list">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#tentang">Home</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#portofolio">Portofolio</a></li>
+            <li><a href="#skill-1">skill</a></li>
         </ul>
     </nav>
     <script>
