--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 </head>
-<body>
+<body >
    <div class="parallax home">
     <nav class="navbar">
-        <div class="logo">My Portofolio</div>
+        <div class="logo" id="text"></div>
+        <script>
+               const text = "my portfolio";
+        let index = 0;
+        function typeEffect() {
+            if (index < text.length) {
+                document.getElementById("text").innerHTML += text[index] + "&nbsp;";
+                index++;
+                setTimeout(typeEffect, 320);
+            }
+        }
+        typeEffect();
+
+       
+        </script>
         <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -132,7 +146,7 @@
  <section id="skill">
  <section class="text-center py-16" class="container-card">
     <h2 class="text-2xl font-bold mb-6">skill</h2>
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4" >
         <div class="flex flex-wrap justify-center">
             <div class="w-full md:w-1/3 p-4" data-aos="zoom-in-up" data-aos-duration="500">
                 <div class="bg-white rounded-lg shadow-lg p-6">
