--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </svg>
                 </div>
                 <h3 class="text-lg font-semibold mb-2">ibadah-ramadhan</h3>
-                <p class="text-gray-600 mb-4">Ibadah Ramadhan adalah website untuk memberi informasi tengan Ramadhan</p>
+                <p class="text-gray-600 mb-4">Ibadah Ramadhan adalah website untuk memberi informasi tentang Ramadhan</p>
                 <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/ibadah-ramadhan/">Next</a></button>
             </div>
 
