--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <li><a href="#tentang">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#portofolio">Portofolio</a></li>
-            <li><a href="#skill">Portofolio</a></li>
+            <li><a href="#skill">Skill</a></li>
             <li><a href="#service">service</a></li>
-            <li><a href="#contact">Portofolio</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
     <script>
