--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <section id="skill">
     <h2 class="text-center text-black text-5xl">skill</h2>
     <section id="skills" class="skill">
-        <div class="skill-container">
+        <div class="skill-container" data-aos="fade-right" data-aos-duration="600"  data-aos-delay="150">
             <div class="skill-card" ata-aos="fade-down" data-aos-duration="400">
                 <div class="skill-name">HTML</div>
                 <div class="skill-bar">
