--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
                 <h3 class="text-lg font-semibold mb-2">Dashboard Admin Pareto ormas BSI</h3>
                 <p class="text-gray-600 mb-4">Website ini berisi tentang pareta ormas</p>
-                <button class="text-blue-600 font-semibold hover:text-blue-800">Next</button>
+                <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/-website-dashbord/">Next</a></button>
             </div>
         </div>
 
