--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body >
    <div class="parallax home">
-    <nav class="navbar">
-        <div class="logo" id="text"  data-aos-duration="5000"></div>
+     <nav class="navbar">
+        <div class="logo" id="text"  data-aos-duration="10000"></div>
         <script>
                const text = "my portfolio";
         let index = 0;
@@ -58,6 +58,7 @@
     });
 
     </script>
+  
      <section id="tentang">
       <div class="container">
         <div class="text" data-aos="fade-up"  data-aos-duration="3000">
@@ -97,7 +98,7 @@
 <div class="portofolio-card">
    
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="400">
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="4000">
                 <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
                         <path d="M12 19V5M5 12l7-7 7 7"/>
@@ -109,7 +110,7 @@
             </div>
 
            
-            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="600">
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="6000">
                 <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
                         <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
@@ -124,7 +125,7 @@
             </div>
 
             
-            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="900">
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="9000">
                 <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
                         <path d="M12 20V10"/>
@@ -135,6 +136,19 @@
                 <h3 class="text-lg font-semibold mb-2">Dashboard Admin Pareto ormas BSI</h3>
                 <p class="text-gray-600 mb-4">Website ini berisi tentang pareta ormas</p>
                 <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/-website-dashbord/">Next</a></button>
+            </div>
+
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="10000">
+                <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
+                        <path d="M12 20V10"/>
+                        <path d="M18 20V4"/>
+                        <path d="M6 20v-4"/>
+                    </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">Website Dian_tas@galery</h3>
+                <p class="text-gray-600 mb-4">Website ini berisi tentang jualan tas</p>
+                <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/website-jualan-bag/">Next</a></button>
             </div>
         </div>
 
