--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ rel="stylesheet">
             <li><a href="#service">service</a></li>
             <li><a href="#contact">contact</a></li>
             <button class="px-3 py-1 text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300">
-                <li><a href="Ungu Ilustasi Media Belajar Presentasi.pdf" target="_blank">Resume</a></li>
+                <li><a href="https://website-lutfi.my.canva.site/webiste-portofolio" target="_blank">Resume</a></li>
            </button>
         </ul>
     </nav>
