--- a/index.html
+++ b/index.html
@@ -155,13 +155,24 @@ rel="stylesheet">
                 <p class="text-gray-600 mb-4">Website ini berisi tentang jualan tas</p>
                 <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/website-jualan-bag/">Next</a></button>
             </div>
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="10000">
+                <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
+                        <path d="M12 20V10"/>
+                        <path d="M18 20V4"/>
+                        <path d="M6 20v-4"/>
+                    </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">Academy Coding</h3>
+                <p class="text-gray-600 mb-4">Website ini berisi tentang belajar coding</p>
+                <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/Website-Academy-Coding/">Next</a></button>
+            </div>
         </div>
-
-                           
-        </div>
+       </div>             
+      </div>
+     </div>
     </div>
-</div>
-    </section>
+ </section>
    
 </div>
 
