--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ rel="stylesheet">
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-        <ul class="nav-list">
+        <ul class="nav-list ">
             <li><a href="#tentang">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#portofolio">Portofolio</a></li>
@@ -50,7 +50,8 @@ rel="stylesheet">
             <li><a href="#contact">contact</a></li>
             <button class="px-3 py-1 text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300">
                 <li><a href="https://website-lutfi.my.canva.site/webiste-portofolio" target="_blank">Resume</a></li>
-           </button>
+           </button>          
+  
         </ul>
     </nav>
     <script>
@@ -64,14 +65,13 @@ rel="stylesheet">
 
     </script>
   
-     <section id="tentang">
-      <div class="container">
-        <div class="text" data-aos="fade-up"  data-aos-duration="3000">
-
-            <h2>welcome to my portfolio website</h2>
-
-        </div>
-      </div>
+  <section id="tentang">
+         <div class="container">
+           <div class="text" data-aos="fade-up"  data-aos-duration="3000">
+                <h2>welcome to my portfolio website</h2>
+            </div>
+         </div>
+                  
      </section>
    </div> 
 
@@ -100,7 +100,7 @@ rel="stylesheet">
         <div class="container-text">
             <h2 class="text-5xl">Portofolio</h2>
         </div>
-<div class="portofolio-card">
+    <div class="portofolio-card">
    
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
             <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="4000">
@@ -166,6 +166,18 @@ rel="stylesheet">
                 <h3 class="text-lg font-semibold mb-2">Academy Coding</h3>
                 <p class="text-gray-600 mb-4">Website ini berisi tentang belajar coding</p>
                 <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/Website-Academy-Coding/">Next</a></button>
+            </div>
+            <div class="service-card bg-white rounded-xl p-6" data-aos="fade-up" data-aos-duration="10000">
+                <div class="service-icon w-12 h-12 rounded-full flex items-center justify-center mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-700">
+                        <path d="M12 20V10"/>
+                        <path d="M18 20V4"/>
+                        <path d="M6 20v-4"/>
+                    </svg>
+                </div>
+                <h3 class="text-lg font-semibold mb-2">Jaya Suti Abadi</h3>
+                <p class="text-gray-600 mb-4">Website ini untuk sekolah jaya Suti Abadi</p>
+                <button class="text-blue-600 font-semibold hover:text-blue-800"><a href="https://lutfi-dika.github.io/Jaya-Suti-Abadi/">Next</a></button>
             </div>
         </div>
        </div>             
